yyyy/mm/dd-hh:mm

--- a/hugodajian.html
+++ b/hugodajian.html
@@ -191,7 +191,7 @@ hugo server<br>
 <h2 id="添加固定链接">添加固定链接</h2>
 <p>这篇教程的加法参考如下<br>
 title: hugo搭建和使用教程<br>
-date: &lsquo;2020/06/01 15:55:32&rsquo;<br>
+date: 2020-06-01 15:55:32<br>
 url: /hugodajian.html</p>
 <h2 id="写文章后部署">写文章后部署</h2>
 <p>在blog目录输入hugo<br>
